--- a/Copy_of_github.ipynb
+++ b/Copy_of_github.ipynb
@@ -6,6 +6,7 @@
       "name": "Copy of github.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,8 +55,7 @@
       },
       "cell_type": "code",
       "source": [
-        "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo(\"ASELrVgtPmM?t=41\")"
+        "# change"
       ],
       "execution_count": 0,
       "outputs": [
