--- a/Github_Lecture.ipynb
+++ b/Github_Lecture.ipynb
@@ -50,43 +50,14 @@
       "metadata": {
         "id": "2rHaO7Savm0f",
         "colab_type": "code",
-        "outputId": "579e8e53-cadd-444d-c6f7-0e5a934352ca",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 321
-        }
+        "colab": {}
       },
       "cell_type": "code",
       "source": [
-        "from IPython.display import YouTubeVideo\n",
-        "YouTubeVideo(\"ASELrVgtPmM?t=41\")"
+        "# changes to file"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/html": [
-              "\n",
-              "        <iframe\n",
-              "            width=\"400\"\n",
-              "            height=\"300\"\n",
-              "            src=\"https://www.youtube.com/embed/ASELrVgtPmM?t=41\"\n",
-              "            frameborder=\"0\"\n",
-              "            allowfullscreen\n",
-              "        ></iframe>\n",
-              "        "
-            ],
-            "text/plain": [
-              "<IPython.lib.display.YouTubeVideo at 0x7f6a81e1a6a0>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "metadata": {
